[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "Capstone for RL specialization from Alberta University"
authors = ["Marc Svensson <marc.svensson@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"

[build-system]
requires = ["setuptools >= 61.0.0", "swig"]
build-backend = "setuptools.build_meta"